# ReticRPyDemo-flat

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
reports/: reticulate-r-python-demo.qmd  testing-cookiecutter.qmd
source/: __init__.py  dataset.py  features.py  plots.py
source/modeling/: predict.py  train.py
