[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reticulate-demo"
version = "0.0.1"
description = "This is a short demo of reticulate to create a bilingual project using alternating r and python code chunks within .qmd file. Not sure if we can create a .qmd file successfullly from ccds. Lets see! We will use lemur-data from tidytuesday. This demo is a replica of the Nicola Rennies blog post (url: https://nrennie.rbind.io/blog/combining-r-and-python-with-reticulate-and-quarto/)"
authors = [
  { name = "mk" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["reticulate-demo"]
include = ["pyproject.toml", "reticulate-demo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["reticulate-demo"]
force-sort-within-sections = true

